--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.64.0",
     "nodemon": "^3.0.2"
   }
 }
