--- a/hellsinglan/package.json
+++ b/hellsinglan/package.json
@@ -5,7 +5,8 @@
   "main": "lib.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "bot": "nodemon bot.js"
   },
   "keywords": [],
   "author": "",
